; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_murmur3.c_update_h1.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_murmur3.c_update_h1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @update_h1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @update_h1(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = xor i32 %8, %7
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @ROT(i32 %10, i32 27)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* %4, align 4
  %14 = add nsw i32 %13, %12
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = mul nsw i32 %15, 5
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = add nsw i32 %17, 1390208809
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

declare dso_local i32 @ROT(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
